--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "dependencies": {
         "express": "3.x",
         "mysql": "2.x",
-        "connect": "2.x"
+        "connect": "2.x",
+        "xmlhttprequest": "1.x",
+        "request": "2.x",
+        "form-data": "0.1.2"
     }
 }
